--- a/login.html
+++ b/login.html
@@ -103,6 +103,10 @@
           <div class="form-text">Must be 10 digits.</div>
         </div>
         <div class="mb-3">
+          <label class="form-label">Address</label>
+          <input type="text" class="form-control" id="address" placeholder="Enter address" required />
+        </div>
+        <div class="mb-3">
           <label class="form-label">Set Password</label>
           <input type="password" class="form-control" id="password" placeholder="Create a password" required />
           <div class="form-text">Must be exactly 8 characters.</div>
